# aetherion-continuum

./: .gitignore  Cargo.toml  README.md  VINCULUM_REHABILITATION_PLAN.md  index.html
baselines/: CAT_BASELINE.md  cat_baseline.json  hypercat.html  hypercat_world.html
core/: conservation_enforce.wgsl  field_tensor.wgsl  gpu_kompress.wgsl  indirect_build.wgsl  pillar_0_field_ingestion.wgsl  pillar_1_continuity_resolution.wgsl  pillar_2_volumetric_simulation.wgsl  pillar_3_cohesion_qef_meshing.wgsl  pillar_4_planetary_culling.wgsl  sparse_stream.wgsl
dsl/: field_dsl.rs  mod.rs
film/: SPRITE_REFINEMENT_PLAN.md  colab_hunyuan.ipynb  kaggle_hunyuan_kernel.py  phase5_kaggle.py  phase5_lightning.py  phase5_tripo.py  sprite_bars.json  sprite_pipeline.py  tripo_bars.json  wind_vegetation.mat
pipeline/: zero_sync_dispatch.rs
proof/: conservation_proof.rs  mod.rs
src/: emergence.rs  emergence_utils.rs  field.rs  main.rs
src/bridge/: manifest.rs
src/dsl/: field_dsl.rs
src/pipeline/: mod.rs  pillar_traits.rs  zero_sync_dispatch.rs
src/proof/: conservation_proof.rs
