[package]
name = "aetherion-continuum"
version = "0.1.0"
edition = "2021"
description = "Field-Native, Conservation-Enforced, Planet-Scale Simulation Engine"
license = "MIT"
repository = "https://github.com/COMMENCINGTHESCOURGE/aetherion-continuum"

[dependencies]
wgpu = "22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.16", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "aetherion"
path = "src/main.rs"
